--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 **/easel_run
 **/data/genome/Acer_negundo_ASM2559438v1.fa
 **/data/annotation/GCA_025594385.1_ASM2559438v1_genomic.gff
+**/data/annotation/acer_negundo_genomic.gtf
